# advent-of-code

./: .gitignore  LICENSE  README.md
aoc2015/day01/: day1.py
aoc2015/day02/: day2.py
aoc2018/: .gitignore  README.md  project.clj
aoc2019/: README.md
aoc2019/common/: intcode.cr
aoc2019/day01/: README.md  problem1.sh
aoc2019/day02/: README.md
aoc2019/day03/: README.md  day03.jl  day03_test.jl
aoc2019/day04/: README.md  day04.php  day04_tests.php
aoc2019/day05/: .gitignore  README.md  day05.cr
aoc2019/day06/: problem1.awk
aoc2019/day07/: README.md  problem1.pl  problem2.cr
aoc2019/day08/: README.md
aoc2019/day09/: README.md  day09.cr
aoc2019/day1/: problem2.sh
aoc2019/day10/: README.md  day10.go  day10_test.go  problem1.go
aoc2019/day11/: README.md  day11.cr
aoc2019/day12/: README.md  day12.lua
aoc2019/day13/: README.md  problem1.rexx  problem2.cr
aoc2019/day2/: README.md  problem1.bas  problem2.bas
aoc2019/day3/: README.md  day3.jl  day3_test.jl  problem1.jl  problem1_test.jl
aoc2019/day4/: README.md  day4_tests.php  problem1.php  problem1_tests.php
aoc2019/day5/: .gitignore  README.md  day5.cr  problem1.cr
aoc2019/day6/: README.md  problem2.awk
aoc2019/day7/: README.md  problem1.pl  problem2.cr
aoc2019/day8/: README.md  day8.coffee  problem1.coffee
aoc2019/day9/: README.md  problem1.cr
aoc2020/day01/: day1.py
aoc2020/day02/: day2.py
aoc2020/day03/: day3.py
aoc2020/day04/: day4.py
aoc2021/: README.md
aoc2022/: .gitignore  README.md  base.nim
aoc2023/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  pyproject.toml
aoc2023/aoc/: __init__.py  containers.py  directions.py  display.py  space.py
aoc2023/tests/: test_containers.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_directions.py  test_space.py
aoc2024/: README.md  _template.py  aoc  day01.py  pyproject.toml
aoc2024/tests/: _template.py  test_day01.py
(+114 files in other folders)
