[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
clj = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
types-colorama = "^0.4.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "aocd",
    "aocd.*",
    "dotenv",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
    "E501", # line too long
]
