[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
advent-of-code-data = "^2.0"
python-dotenv = "^1.0.0"
colorama = "^0.4"
clj = "^0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.13"
types-colorama = "*"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "aocd",
    "aocd.*",
    "dotenv",
]
ignore_missing_imports = true

[tool.ruff]
ignore = [
    "E501", # line too long
]
